fix page size handling in scrollbar

--- a/packages/widgets/style/scrollbar.css
+++ b/packages/widgets/style/scrollbar.css
@@ -47,8 +47,3 @@
   box-sizing: border-box;
   position: absolute;
 }
-
-
-.p-ScrollBar-thumb.p-mod-hidden {
-  display: none !important;
-}
